# spec-kit

./: .gitignore  .markdownlint-cli2.jsonc  .tmp-smoke.ps1  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORK_DIVERGENCE.md  README.md  SUPPORT.md  blog-fork-sync-strategy.md  pyproject.toml  release_notes.md  spec-driven.md
.DocSpecSpark/: KeyDocuments-NotForProfits.md  KeyDocuments-SmallBusiness.md  README.md  architecture-decisions.md  company-constitution-schema.md  company-profiles.md  integration-strategy.md  mvp-quick-start.md  nonprofit-template-library.md  phased-rollout-plan.md  smallbusiness-template-library.md  user-personas.md
.devcontainer/: devcontainer.json
.documentation/: MIGRATION-QUICKREF.md  README.md  adaptive-lifecycle.md  constitution-guide.md  critic-usage.md  harvest-usage.md  index.md  installation.md  local-development.md  migration-guide.md  pr-review-implementation-plan.md  pr-review-usage.md  quickstart.md  roadmap.md  site-audit-usage.md  spec-driven-development.md  spec-upgrade-command.md  testing-upgrade-command.md  toc.yml  upgrade.md  why-i-forked-spec-kit.md
.github/: BRANCH_PROTECTION.md
.github/workflows/: docs.yml  (+1 more)
docs/: constitution-guide.md  critic-usage.md  docfx.json  index.md  installation.md  local-development.md  pr-review-implementation-plan.md  pr-review-usage.md  quickstart.md  site-audit-usage.md  spec-driven-development.md  toc.yml  upgrade.md  why-i-forked-spec-kit.md
extensions/: README.md  catalog.community.json
incoming/: README.md
reports/: git-spark-report.html  git-spark-report.md
(+63 files in other folders)
